# smarter

./: README.md  pyproject.toml
smarter/: config.py
smarter/base/: home.py
