[tool.poetry]
name = "smarter"
version = "0.1.0"
description = "Smarter - Smart Home Automation, But Smarter"
authors = ["Ryan Downing <ryansdowning1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
